major changes : drag the top bar and content + no jumping issue again

--- a/src/styles/Drawer.module.css
+++ b/src/styles/Drawer.module.css
@@ -90,44 +90,32 @@
 }
 
 .phill {
-    background-color   : rgb(199 199 199);
-    /* width           : 30px; */
-    width              : 50px;
-    height             : 6px;
-    border-radius      : 1rem;
-    position           : absolute;
-    top                : 11px;
-    /* left            : calc(50% - 25px); */
-    left               : 50%;
-    right              : 50%;
-    transform          : translate(-50%);
-    cursor             : pointer;
-    /* padding         : 4px;
+    background-color      : rgb(199 199 199);
+    /* width              : 30px; */
+    width                 : 50px;
+    height                : 6px;
+    border-radius         : 1rem;
+    position              : absolute;
+    top                   : 11px;
+    /* left               : calc(50% - 25px); */
+    left                  : 50%;
+    right                 : 50%;
+    transform             : translate(-50%);
+    cursor                : pointer;
+    /* padding            : 4px;
 }
 
 .topBar {
-    /* background-color: rgb(245, 145, 145); */
+    /* background-color   : rgb(245, 145, 145); */
     /* border-bottom      : 1px solid #e2e2e2; */
 }
 
 .topBarContent {
-    padding    : 1rem;
-    display    : flex;
-    align-items: center;
-    font-family: system-ui,
-        -apple-system,
-        BlinkMacSystemFont,
-        'Segoe UI',
-        Roboto,
-        Oxygen,
-        Ubuntu,
-        Cantarell,
-        'Open Sans',
-        'Helvetica Neue',
-        sans-serif;
-    /* font-weight: 100; */
-
-
+    padding      : 1rem;
+    display      : flex;
+    align-items  : center;
+    font-family  : var(--font-primary);
+    border-bottom: 1px solid #e3e3e3;
 }
 
 .topBarContent h3 {
@@ -139,18 +127,34 @@
     border-radius: 50%;
     padding      : 10px;
     border       : 0;
-
     font-size: 100%;
+    width: 52px;
+height: 52px;
+background-color: transparent;
+touch-action: none;
 
+}
+.topBarContent svg {
+    /* width: 24px !important;
+    height: 24px !important; */
+pointer-events: none;
 }
 
 .topBarContent button:is(:focus) {
     /* background-color: rgb(235, 235, 235); */
-    opacity: .7;
+    /* opacity: .7; */
+    background-color: rgb(226, 226, 226);
 }
 
+.topBarContent button:is(:hover) {
+    /* background-color: rgb(235, 235, 235); */
+    /* border:3px solid red; */
+    background-color: rgb(221, 221, 221);
+}
 .topBarContent button:is(:active) {
     /* background-color: rgb(235, 235, 235); */
     /* border:3px solid red; */
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(226, 226, 226);
+    opacity: .7;
+    transition: all .2s ease-in-out;
 }
