--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,17 @@
   --font-mono    : ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
+  --font-primary: system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
   --foreground-rgb      : 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb  : 255, 255, 255;
@@ -119,14 +129,14 @@ video,
 
 .videoCard {
   /* margin         : 10px 0; */
-  margin-top: 1rem;
-  color          : rgb(61, 61, 61);
-  display        : flex;
-  align-items    : center;
-  justify-content: center;
-  font-family    : system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-top      : 1rem;
+  color           : rgb(61, 61, 61);
+  display         : flex;
+  align-items     : center;
+  justify-content : center;
+  font-family     : var(--font-primary);
   background-color: rgb(196, 196, 196);
-  height:200px;
+  height          : 200px;
 }
 
 ::-webkit-scrollbar {
